build: Bump to VanillaGradle 0.2 and Gradle 7 (#3381)
This is likely require a full re-import in most IDEs due to some
organizational changes.